--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.1.0",
+    "chess.js": "^1.2.0",
     "gsap": "^3.13.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
